--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
   "type": "library",
   "homepage": "https://github.com/ap-lib/directory-class-finder",
   "license": "MIT",
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "authors": [
     {
       "name": "Anton Panfilov"
